<resources>
    <string name="app_name">Exposure Finder</string>
    <string name="action_settings">Settings</string>
    <string name="message_no_permissions">The app cannot work without permissions</string>
    <string name="label_ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cd_take_picture">Take picture</string>
    <string name="cb_open_gallery">Navigate to Gallery</string>
    <string name="film_speed_title">Film speed ASA/DIN°</string>
    <string name="default_film_speed_value">400</string>
    <string name="filter_title">Filter</string>
    <string name="default_filter_value">#000000:0</string>
    <string name="aperture_values_title">AV Stops</string>
    <string name="shutter_values_title">TV Stops</string>

    <string-array name="film_speed_labels">
        <item>16 / 13°</item>
        <item>20 / 14°</item>
        <item>25 / 15°</item>
        <item>32 / 16°</item>
        <item>40 / 17°</item>
        <item>50 / 18°</item>
        <item>64 / 19°</item>
        <item>80 / 20°</item>
        <item>100 / 21°</item>
        <item>125 / 22°</item>
        <item>160 / 23°</item>
        <item>200 / 24°</item>
        <item>250 / 25°</item>
        <item>320 / 26°</item>
        <item>400 / 27°</item>
        <item>500 / 28°</item>
        <item>640 / 29°</item>
        <item>800 / 30°</item>
        <item>1000 / 31°</item>
        <item>1250 / 32°</item>
        <item>1600 / 33°</item>
        <item>2000 / 34°</item>
        <item>2500 / 35°</item>
        <item>3200 / 36°</item>
    </string-array>

    <string-array name="film_speed_values">
        <item>16</item>
        <item>20</item>
        <item>25</item>
        <item>32</item>
        <item>40</item>
        <item>50</item>
        <item>64</item>
        <item>80</item>
        <item>100</item>
        <item>125</item>
        <item>160</item>
        <item>200</item>
        <item>250</item>
        <item>320</item>
        <item>400</item>
        <item>500</item>
        <item>640</item>
        <item>800</item>
        <item>1000</item>
        <item>1250</item>
        <item>1600</item>
        <item>2000</item>
        <item>2500</item>
        <item>3200</item>
    </string-array>

    <string-array name="filter_labels">
        <item>---</item>
        <item>Light Yellow (-1)</item>
        <item>Medium Yellow (-1.5)</item>
        <item>Sport (-1)</item>
        <item>Light Green (-1)</item>
        <item>Green (-1.5)</item>
        <item>Light Orange (-1.5)</item>
        <item>Orange (-2)</item>
        <item>Medium Orange (-2.5)</item>
        <item>Dark Orange (-3)</item>
        <item>Light Red (-2)</item>
        <item>Red (-2.5)</item>
        <item>Medium Red (-3)</item>
        <item>Dark Red (-3.5)</item>
        <item>Light Blue (-0.5)</item>
        <item>Grey 2 (-2)</item>
        <item>Grey 4 (-4)</item>
        <item>Ultra-Violet (-0.5)</item>
        <item>H1 (-0.5)</item>
    </string-array>

    <string-array name="filter_values">
        <item>#000000:0</item>
        <item>#FFFFC5:-1</item>
        <item>#ffe200:-1.5</item>
        <item>#ffffff:-1</item>
        <item>#90EE90:-1</item>
        <item>#00ff00:-1.5</item>
        <item>#FFD580:-1.5</item>
        <item>#FFA500:-2</item>
        <item>#ffa70b:-2.5</item>
        <item>#FF8C00:-3</item>
        <item>#FF7F7F:-2</item>
        <item>#ff0000:-2.5</item>
        <item>#7d1211:-3</item>
        <item>#D8b000:-3.5</item>
        <item>#add8e6:-0.5</item>
        <item>#fafafa:-2</item>
        <item>#afafaf:-4</item>
        <item>#0000af:-0.5</item>
        <item>#000000:-0.5</item>
    </string-array>

    <string-array name="aperture_values_labels">
        <item>1.4</item>
        <item>1.9</item>
        <item>2.8</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5.6</item>
        <item>8</item>
        <item>11</item>
        <item>16</item>
        <item>22</item>
    </string-array>

    <string-array name="synchro_compur_2_8_aperture_values">
        <item>2.8</item>
        <item>3.5</item>
        <item>4</item>
        <item>5.6</item>
        <item>8</item>
        <item>11</item>
        <item>16</item>
        <item>22</item>
    </string-array>

    <string-array name="synchro_compur_3_5_aperture_values">
        <item>3.5</item>
        <item>4</item>
        <item>5.6</item>
        <item>8</item>
        <item>11</item>
        <item>16</item>
        <item>22</item>
    </string-array>

    <string-array name="yashica_50mm_aperture_values">
        <item>1.9</item>
        <item>2.8</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5.6</item>
        <item>8</item>
        <item>11</item>
        <item>16</item>
        <item>22</item>
    </string-array>

    <string-array name="yashica_zoom_aperture_values">
        <item>4.5</item>
        <item>5.6</item>
        <item>8</item>
        <item>11</item>
        <item>16</item>
        <item>22</item>
    </string-array>

    <string-array name="aperture_values">
        <item>1.4</item>
        <item>1.9</item>
        <item>2.8</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5.6</item>
        <item>8</item>
        <item>11</item>
        <item>16</item>
        <item>22</item>
    </string-array>

    <string-array name="shutter_values_labels">
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>300</item>
        <item>250</item>
        <item>125</item>
        <item>100</item>
        <item>60</item>
        <item>50</item>
        <item>30</item>
        <item>25</item>
        <item>15</item>
        <item>10</item>
        <item>8</item>
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="rolleiflex_3_5_shutter_values">
        <item>500</item>
        <item>250</item>
        <item>125</item>
        <item>60</item>
        <item>30</item>
        <item>15</item>
        <item>8</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="zeiss_ikon_ikonta_shutter_values">
        <item>500</item>
        <item>250</item>
        <item>100</item>
        <item>50</item>
        <item>25</item>
        <item>10</item>
        <item>5</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="shutter_values">
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>300</item>
        <item>250</item>
        <item>125</item>
        <item>100</item>
        <item>60</item>
        <item>50</item>
        <item>30</item>
        <item>25</item>
        <item>15</item>
        <item>10</item>
        <item>8</item>
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
    </string-array>
</resources>
